bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if ( (talking && hour<7) || (talking && hour>20) )
  	return true
  else
  	return false
  }

/* autre écriture

def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if ( (talking==true && hour<7) || (talking==true && hour>20) )
  	return true
  else
  	return false
  }